--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 		<title>UrbanHive</title>
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/responsive.css" />
+		<!--: ---------------------------- font awesome ----------------------------- -->
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+			integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 	</head>
 
 	<body>
@@ -14,16 +22,300 @@
 			<div class="nav-container">
 				<div class="logo-container">
 					<img src="./resources/nav-image/urban-hive.png" alt="" />
-					<p>Urban<span class="hive-section">Hive</span></p>
+					<p>
+						Urban
+						<span class="hive-section">Hive</span>
+					</p>
 				</div>
 				<div class="nav-item-container">
 					<a href="">Home</a>
 					<a href="">About</a>
 					<a href="">Products</a>
-					<a class="login-btn" href="">Login</a>
+					<a class="login-btn" href="">
+						Login
+						<i class="fa-solid fa-right-to-bracket"></i>
+					</a>
 				</div>
 			</div>
 		</nav>
 		<!--: ---------------------- navbar section ends here ----------------------- -->
+
+		<!--: ------------------ simple banner section starts here ------------------ -->
+		<section class="banner-container">
+			<div class="banner-text">
+				<h1>Mans Bags</h1>
+				<p>New Man's collection</p>
+				<div class="icons-container">
+					<span><i class="fa-brands fa-facebook" style="color: blue"></i></span>
+					<span>
+						<i class="fa-brands fa-twitter" style="color: skyblue"></i>
+					</span>
+					<span><i class="fa-brands fa-youtube" style="color: red"></i></span>
+					<span>
+						<i
+							class="fa-brands fa-square-instagram"
+							style="color: darkviolet"
+						></i>
+					</span>
+				</div>
+				<button class="banner-buttons">See More</button>
+				<button class="banner-buttons">Shop Now</button>
+			</div>
+			<div class="banner-img">
+				<img src="./resources/banner-image/bag-picture.jpg" alt="" />
+			</div>
+		</section>
+		<!--: ------------------ simple banner section ends here ------------------ -->
+
+		<!--: -------------------- products section starts here --------------------- -->
+		<h1 style="text-align: center">Products</h1>
+		<section class="grid-container">
+			<div class="single-product">
+				<img src="./resources/products/bag.png" alt="" />
+				<div class="product-icon-name-container">
+					<h3>Product-1</h3>
+					<div>
+						<span><i class="fa-solid fa-cart-shopping product-icon"></i></span>
+						<span><i class="fa-regular fa-credit-card product-icon"></i></span>
+						<span><i class="fa-regular fa-eye product-icon"></i></span>
+					</div>
+				</div>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam
+					ipsam expedita odit sapiente, possimus in corporis sed facere.
+					Dignissimos, iure.
+				</p>
+				<p>Price: 500$</p>
+			</div>
+			<div class="single-product">
+				<img src="./resources/products/bag.png" alt="" />
+				<div class="product-icon-name-container">
+					<h3>Product-1</h3>
+					<div>
+						<span><i class="fa-solid fa-cart-shopping product-icon"></i></span>
+						<span><i class="fa-regular fa-credit-card product-icon"></i></span>
+						<span><i class="fa-regular fa-eye product-icon"></i></span>
+					</div>
+				</div>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam
+					ipsam expedita odit sapiente, possimus in corporis sed facere.
+					Dignissimos, iure.
+				</p>
+				<p>Price: 500$</p>
+			</div>
+			<div class="single-product">
+				<img src="./resources/products/bag.png" alt="" />
+				<div class="product-icon-name-container">
+					<h3>Product-1</h3>
+					<div>
+						<span><i class="fa-solid fa-cart-shopping product-icon"></i></span>
+						<span><i class="fa-regular fa-credit-card product-icon"></i></span>
+						<span><i class="fa-regular fa-eye product-icon"></i></span>
+					</div>
+				</div>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam
+					ipsam expedita odit sapiente, possimus in corporis sed facere.
+					Dignissimos, iure.
+				</p>
+				<p>Price: 500$</p>
+			</div>
+			<div class="single-product">
+				<img src="./resources/products/bag.png" alt="" />
+				<div class="product-icon-name-container">
+					<h3>Product-1</h3>
+					<div>
+						<span><i class="fa-solid fa-cart-shopping product-icon"></i></span>
+						<span><i class="fa-regular fa-credit-card product-icon"></i></span>
+						<span><i class="fa-regular fa-eye product-icon"></i></span>
+					</div>
+				</div>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam
+					ipsam expedita odit sapiente, possimus in corporis sed facere.
+					Dignissimos, iure.
+				</p>
+				<p>Price: 500$</p>
+			</div>
+			<div class="single-product">
+				<img src="./resources/products/bag.png" alt="" />
+				<div class="product-icon-name-container">
+					<h3>Product-1</h3>
+					<div>
+						<span><i class="fa-solid fa-cart-shopping product-icon"></i></span>
+						<span><i class="fa-regular fa-credit-card product-icon"></i></span>
+						<span><i class="fa-regular fa-eye product-icon"></i></span>
+					</div>
+				</div>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam
+					ipsam expedita odit sapiente, possimus in corporis sed facere.
+					Dignissimos, iure.
+				</p>
+				<p>Price: 500$</p>
+			</div>
+			<div class="single-product">
+				<img src="./resources/products/bag.png" alt="" />
+				<div class="product-icon-name-container">
+					<h3>Product-1</h3>
+					<div>
+						<span><i class="fa-solid fa-cart-shopping product-icon"></i></span>
+						<span><i class="fa-regular fa-credit-card product-icon"></i></span>
+						<span><i class="fa-regular fa-eye product-icon"></i></span>
+					</div>
+				</div>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam
+					ipsam expedita odit sapiente, possimus in corporis sed facere.
+					Dignissimos, iure.
+				</p>
+				<p>Price: 500$</p>
+			</div>
+			<div class="single-product">
+				<img src="./resources/products/bag.png" alt="" />
+				<div class="product-icon-name-container">
+					<h3>Product-1</h3>
+					<div>
+						<span><i class="fa-solid fa-cart-shopping product-icon"></i></span>
+						<span><i class="fa-regular fa-credit-card product-icon"></i></span>
+						<span><i class="fa-regular fa-eye product-icon"></i></span>
+					</div>
+				</div>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam
+					ipsam expedita odit sapiente, possimus in corporis sed facere.
+					Dignissimos, iure.
+				</p>
+				<p>Price: 500$</p>
+			</div>
+			<div class="single-product">
+				<img src="./resources/products/bag.png" alt="" />
+				<div class="product-icon-name-container">
+					<h3>Product-1</h3>
+					<div>
+						<span><i class="fa-solid fa-cart-shopping product-icon"></i></span>
+						<span><i class="fa-regular fa-credit-card product-icon"></i></span>
+						<span><i class="fa-regular fa-eye product-icon"></i></span>
+					</div>
+				</div>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam
+					ipsam expedita odit sapiente, possimus in corporis sed facere.
+					Dignissimos, iure.
+				</p>
+				<p>Price: 500$</p>
+			</div>
+		</section>
+		<!--: --------------------- products section ends here ---------------------- -->
+
+		<!--: -------------------- discount section starts here --------------------- -->
+		<section class="discount-section">
+			<div class="discount-container">
+				<div class="discount-img">
+					<img src="./resources/discount/React-removebg-preview.png" alt="" />
+					<div class="discount-number">30%</div>
+				</div>
+				<div class="discount-text">
+					<h3>
+						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,
+						voluptates.
+					</h3>
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+						Dignissimos, qui enim voluptatum tempora aliquid ad rerum numquam
+						eius aspernatur expedita!
+					</p>
+					<button>Buy Now</button>
+				</div>
+			</div>
+		</section>
+		<!--: -------------------- discount section ends here --------------------- -->
+
+		<!--: ------------------- user review section starts here ------------------- -->
+		<section class="review-container">
+			<div class="single-review">
+				<div class="top-review">
+					<img src="./resources/customer-picture/person.png" alt="" />
+					<p>Customer-1</p>
+					<p>12/06/2025</p>
+				</div>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, iste.
+				</p>
+			</div>
+			<div class="single-review">
+				<div class="top-review">
+					<img src="./resources/customer-picture/person.png" alt="" />
+					<p>Customer-1</p>
+					<p>12/06/2025</p>
+				</div>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, iste.
+				</p>
+			</div>
+			<div class="single-review">
+				<div class="top-review">
+					<img src="./resources/customer-picture/person.png" alt="" />
+					<p>Customer-1</p>
+					<p>12/06/2025</p>
+				</div>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, iste.
+				</p>
+			</div>
+			<div class="single-review">
+				<div class="top-review">
+					<img src="./resources/customer-picture/person.png" alt="" />
+					<p>Customer-1</p>
+					<p>12/06/2025</p>
+				</div>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, iste.
+				</p>
+			</div>
+			<div class="single-review">
+				<div class="top-review">
+					<img src="./resources/customer-picture/person.png" alt="" />
+					<p>Customer-1</p>
+					<p>12/06/2025</p>
+				</div>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, iste.
+				</p>
+			</div>
+			<div class="single-review">
+				<div class="top-review">
+					<img src="./resources/customer-picture/person.png" alt="" />
+					<p>Customer-1</p>
+					<p>12/06/2025</p>
+				</div>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, iste.
+				</p>
+			</div>
+			<div class="single-review">
+				<div class="top-review">
+					<img src="./resources/customer-picture/person.png" alt="" />
+					<p>Customer-1</p>
+					<p>12/06/2025</p>
+				</div>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, iste.
+				</p>
+			</div>
+			<div class="single-review">
+				<div class="top-review">
+					<img src="./resources/customer-picture/person.png" alt="" />
+					<p>Customer-1</p>
+					<p>12/06/2025</p>
+				</div>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, iste.
+				</p>
+			</div>
+		</section>
+		<!--: ------------------- user review section ends here ------------------- -->
+		<!-- <script src="js/bottom.js"></script> -->
 	</body>
 </html>
